oil brand stretch fix (edge)

--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -147,25 +147,26 @@
                 justify-content: center;
                 
                 a {
-                    height: 100%;
-                    width:100%;
+                    height: 80%;
+                    width:80%;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
                        
                     .bostock-logo {
-                        // max-width: 90%;
+                        max-width: 100%;
 
                     }
 
                     .aozora-logo {
-                        // max-width: 80%;
+                        max-width: 100%;
                     } 
                 }
 
                 img {
-                    min-height: 80px;
+                    max-height: 100%;
+                    
                 }
             }
             
